@@ -21,6 +21,7 @@ New in SVN
 * Reopened Issue 310: Line numbers in code blocks are wrong
 * Reopened Issue 337: Bad layout with inline images in tables
 * Marked Issue 358 as fixed.
+* Fixed Issue 410: always include full lines in code-blocks (mmueller patch)
 
 New in 0.92
 -----------
